# mvp_msgs

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: on-pull-request.yaml
msg/: ControlMode.msg  ControlModes.msg  ControlProcess.msg  DVL.msg  DVLBeam.msg  Float64Stamped.msg  Float64StampedWithVariance.msg  HelmStates.msg  MSISInfo.msg  ModemHealth.msg  ModemPose.msg  Pressure.msg  PwmSignal.msg  Waypoint.msg
srv/: ChangeState.srv  CommsControllerInfo.srv  CommsHealth.srv  GetControlMode.srv  GetControlModes.srv  GetState.srv  GetStates.srv  GetWaypoint.srv  SetControlPoint.srv
