<?xml version="1.0"?>
<package format="2">
  <name>seal_msgs</name>
  <version>0.0.0</version>
  <description>The seal_msgs package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
